bdr.BDR2.scala.error
Compilation error:
BDR2:3: error: not found: value Gauche
  case "L"=> Gauche();avance()
             ^